--- a/package.json
+++ b/package.json
@@ -13,32 +13,32 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
-    "@confy/core": "^0.5.2",
-    "@confy/preset-react": "^0.3.2",
-    "@confy/preset-typescript": "^0.2.0",
-    "@emotion/babel-preset-css-prop": "^10.0.23",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.1.3",
-    "@types/animejs": "^3.1.0",
-    "@types/react": "^16.9.23",
-    "@types/react-dom": "^16.9.5",
-    "@types/three": "^0.103.2",
-    "cross-env": "^7.0.2",
-    "react-refresh": "^0.7.2",
-    "terser-webpack-plugin": "^2.3.6"
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.18.6",
+    "@confy/core": "^0.5.3",
+    "@confy/preset-react": "^0.3.3",
+    "@confy/preset-typescript": "^0.2.1",
+    "@emotion/babel-preset-css-prop": "^11.0.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.0",
+    "@types/animejs": "^3.2.1",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@types/three": "^0.143.1",
+    "cross-env": "^7.0.3",
+    "react-refresh": "^0.11.0",
+    "terser-webpack-plugin": "^5.3.1"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.22",
-    "animejs": "^3.1.0",
-    "drei": "^0.0.54",
-    "easystarjs": "^0.4.3",
-    "fast-simplex-noise": "3.2.0",
-    "immer": "^6.0.3",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-three-fiber": "^4.2.8",
-    "three": "^0.112.1",
-    "zustand": "^2.2.3"
+    "@emotion/core": "^11.10.0",
+    "animejs": "^3.2.1",
+    "drei": "^9.11.1",
+    "easystarjs": "^1.1.0",
+    "fast-simplex-noise": "^5.0.0",
+    "immer": "^9.0.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-three-fiber": "^8.10.0",
+    "three": "^0.153.2",
+    "zustand": "^4.1.5"
   }
 }
